--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.1.1
 opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 orjson==3.10.15
 overrides==7.7.0
@@ -108,7 +109,7 @@ python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 python-multipart==0.0.20
 pytz==2024.2
-pywin32==308
+pywin32==306
 pywinpty==2.0.14
 PyYAML==6.0.2
 pyzmq==26.2.1
